-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
9439d5776 (dev), dd0b0a33f (6.6)
To reproduce in surfacegallery
- go to oscilloscope
- click on the graph
For Gerrit Dashboard: QTBUG-116485 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
499387,2 | Fix surfacegraph picking crash | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
499576,2 | Fix surfacegraph picking crash | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |