Fix surfacegraph picking crash

Pick-to: 6.6
Fixes: QTBUG-116485
Change-Id: I59a5de9a244cab9fcd5b0058926dac12e2c6d3ca
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>